cluster/drone-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone
  namespace: ci-cd
  labels:
    app: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone
  template:
    metadata:
      labels:
        app: drone
    spec:
      containers:
      - name: drone
        image: drone/drone
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /data
          name: dronedir
      volumes:
        - name: dronedir
          hostPath: #beware: works only in with single node
            path: /data/drone
            type: DirectoryOrCreate
