cluster/drone-runner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: runner
  namespace: ci-cd
  labels:
    app.kubernetes.io/name: runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: runner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: runner
    spec:
      containers:
      - name: runner
        image: drone/drone-runner-kube:latest
        ports:
        - containerPort: 3000
