cluster/gitea-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: ci-cd
spec:
  selector:
    app: gitea
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
