cluster/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  type: LoadBalancer
  selector:
    app: registry
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000 #  add "insecure-registries":["172.24.167.89:5000"], with correct IP to docker engine config in windows docker UI
