cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nccluster
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: gitea
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea
            port: 
              number: 80
  - host: drone
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drone
            port: 
              number: 80
